<resources>
    <string name="app_name">Ticket-Flight</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new">New?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_home">Explore the beautiful world!</string>
    <string name="search_bar">Search</string>
    <string name="booking_service">Booking Services</string>
    <string name="trips">Trips</string>
    <string name="hotel">Hotel</string>
    <string name="transport">Transport</string>
    <string name="events">Events</string>
    <string name="notification">Notification            </string>
    <string name="account">Account</string>
    <string name="name_account">Nguyen Minh Luan</string>
    <string name="personal">Personal information</string>
    <string name="saved">Saved</string>
    <string name="payment">Payment and cards</string>
    <string name="history">Booking history</string>
    <string name="settings">Settings</string>
    <string name="end_session">End session</string>
    <string name="edit_profile">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="save_changes">Save changes</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="departure">Departure</string>
    <string name="returndate">Return</string>
    <string name="arrival">Arrival</string>
    <string name="passenger_luggage">Passenger &amp; Luggage</string>
    <string name="button_class">Class</string>
    <string name="economy">Economy</string>
    <string name="business">Business</string>
    <string name="flight">Flights</string>
    <string name="number_of_flights">flights avaliable New York to London</string>
    <string name="from_place_abb">NYC</string>
    <string name="from_place">New York</string>
    <string name="to_place_abb">LDN</string>
    <string name="to_place">London</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="number">Number</string>
    <string name="filters">Filters</string>
    <string name="sort_by">Sort by</string>
    <string name="arrival_time">Arrival time</string>
    <string name="departure_time">Departure time</string>
    <string name="lowest_fare">Lowest fare</string>
    <string name="duration">Duration</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="select_seat">Select Seats</string>
    <string name="traveller">Traveller</string>
    <string name="selected">Selected</string>
    <string name="booked">Booked</string>
    <string name="available">Available</string>
    <string name="your_seat">Your seats</string>
    <string name="total_price">Total price</string>
    <string name="continue_name">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home Fragment</string>
    <string name="booking_fragment">Booking</string>
    <string name="hotel_fragment">Hotel Comming soon!</string>
    <string name="trips_fragment">Trips Comming soon!</string>
    <string name="events_fragment">Events Comming soon!</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="account_fragment">Account Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="transport_booking">Transport Booking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_one">1</string>
    <string name="boarding_pass">Boarding Pass</string>
    <string name="name_pass">British Airways Flight NL-41</string>
    <string name="passenger">Passenger</string>
    <string name="ticket">Ticket</string>
    <string name="seat">Seat</string>
    <string name="download_ticket">Download Ticket</string>
</resources>