<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FilterBookingFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageButton
        android:id="@+id/button_back_flight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/filters"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/departure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_filters" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_booking_hour_departure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/arrival"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_booking_hour_departure" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_booking_hour_arrival"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_booking_hour_arrival" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/range_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="5"
        android:valueFrom="0"
        android:valueTo="500"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginTop="10dp"
        app:thumbColor="@color/slider_thumb_color"
        app:trackColorActive="@color/slider_active_track_color"
        app:trackColorInactive="@color/slider_inactive_track_color"
        app:tickVisible="false"
        app:values="@array/initial_values" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/range_slider">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:background="@drawable/edit_date"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="10dp"
                android:text="@string/from"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/edit_from_price"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:inputType="number"
                android:background="@drawable/edit_date"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_date"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="10sp"
                android:text="@string/to"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/edit_to_price"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:inputType="number"
                android:background="@drawable/edit_date"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="10dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sort_by"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@id/linear_radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:weightSum="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">
        <RadioGroup
            android:id="@+id/radio_group_sort"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_button_arrival"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:buttonTint="@color/mainColor"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/arrival_time" />

            <RadioButton
                android:id="@+id/radio_button_departure"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:buttonTint="@color/mainColor"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/departure_time" />

            <RadioButton
                android:id="@+id/radio_button_price"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:buttonTint="@color/mainColor"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/price" />

            <RadioButton
                android:id="@+id/radio_button_lowest_fare"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:buttonTint="@color/mainColor"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/lowest_fare" />

            <RadioButton
                android:id="@+id/radio_button_duration"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:buttonTint="@color/mainColor"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/duration" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_radioButton"
        android:orientation="horizontal">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp">
            <ImageButton
                android:id="@+id/button_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/button_filter_save"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/button_reset"
                app:layout_constraintStart_toStartOf="@+id/button_reset"
                app:layout_constraintTop_toTopOf="@+id/button_reset"
                app:layout_constraintBottom_toBottomOf="@+id/button_reset"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/reset"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/button_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/orange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/button_filter_save"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/button_done"
                app:layout_constraintStart_toStartOf="@+id/button_done"
                app:layout_constraintTop_toTopOf="@+id/button_done"
                app:layout_constraintBottom_toBottomOf="@+id/button_done"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_extrabold"
                android:textColor="@color/white"
                android:text="@string/done"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>